fix(solve): Resolve z-index issues

--- a/styleguide/derek/templates/thought-leadership-overview/_partials/_nav.scss
+++ b/styleguide/derek/templates/thought-leadership-overview/_partials/_nav.scss
@@ -13,7 +13,7 @@ $nav-link-black: #00001e;
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10000;
+  z-index: 275;
 }
 
 .rsTl-nav {
