--- a/styleguide/derek/templates/thought-leadership-overview/_thought-leadership.scss
+++ b/styleguide/derek/templates/thought-leadership-overview/_thought-leadership.scss
@@ -58,7 +58,7 @@ $row-space: 35px;
 .rsTl-feature-headerContainer {
   padding: 25px $grid-gutter-width / 2 0;
   position: relative;
-  z-index: 999;
+  z-index: 250;
 }
 
 .rsTl-article-contentContainer {
